--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scZale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="http://pifi5lc1c.bkt.clouddn.com/web/favicon.ico">
     <title>金凯木门官方网站--家装全屋定制</title>
   </head>
@@ -11,6 +13,6 @@
 
     </div>
     <!-- built files will be auto injected -->
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=0KipmmWOm7ykLH5cAZpsyxfiMD5XCi8V"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.2&ak=0KipmmWOm7ykLH5cAZpsyxfiMD5XCi8V"></script>
   </body>
 </html>
