--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scZale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="http://pifi5lc1c.bkt.clouddn.com/web/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="http://cdn.jinkaidoor.com/web/favicon.ico">
     <title>金凯木门官方网站--家装全屋定制</title>
   </head>
   <body>
